syntax = "proto3";

package fileupload.v1;


option go_package = "github.com/lao-tseu-is-alive/go-grpc-file-upload/gen/fileupload/v1;fileuploadv1";

service FileUploadService {
  rpc Upload(stream UploadRequest) returns (UploadResponse);
}

message UploadRequest {
  bytes data = 1;
  string filename = 2;

  // Metadata send only in first chunk
  string title = 3;
  string sha256 = 4;
}

message UploadResponse {
  string message = 1;
  int64 size = 2;
  bool hash_ok = 3;
}

